# itmo_program_bot

./: .env.example  README.md  docker-compose.yml
tg_bot/: Cargo.toml  Dockerfile  ai_product_parsed.json
tg_bot/data/: ai.html  ai_parsed.json  ai_product.html  ai_product_parsed.json  programs.json
tg_bot/src/: html_parser.rs  main.rs  parse_html.rs  yandex_gpt_client.rs
