[package]
name = "tg_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.22", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.142"
teloxide = "0.17.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

